tasks/coverage/snapshots/postcss_parser/function.txt
hdx_parser::Unimplemented

  × This block cannot yet be parsed by the parser :(
   ╭─[tasks/coverage/postcss-parser-tests/cases/function.css:1:1]
 1 │ a {
 2 │     background-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
   ·                       ─────────────────────────────────────────┬─────────────────────────────────────────
   ·                                                                ╰── Didn't recognise this bit
 3 │     background-image: url("./image (1).jpg");
   ╰────
  help: This feature needs to be implemented within hdx. This file won't parse without it.
hdx_parser::UnknownDeclaration

  × Ignored property due to parse error.
   ╭─[tasks/coverage/postcss-parser-tests/cases/function.css:1:1]
 1 │ a {
 2 │     background-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
   ·     ──────────────────────────────────────────────────┬──────────────────────────────────────────────────
   ·                                                       ╰── This property was ignored.
 3 │     background-image: url("./image (1).jpg");
   ╰────
  help: This property is going to be ignored because it doesn't look valid. If it is valid, please file an issue!
hdx_parser::Unimplemented

  × This block cannot yet be parsed by the parser :(
   ╭─[tasks/coverage/postcss-parser-tests/cases/function.css:2:1]
 2 │     background-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
 3 │     background-image: url("./image (1).jpg");
   ·                       ──┬─
   ·                         ╰── Didn't recognise this bit
 4 │     background-image: url( './image (1).jpg' );
   ╰────
  help: This feature needs to be implemented within hdx. This file won't parse without it.
hdx_parser::UnknownDeclaration

  × Ignored property due to parse error.
   ╭─[tasks/coverage/postcss-parser-tests/cases/function.css:2:1]
 2 │     background-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
 3 │     background-image: url("./image (1).jpg");
   ·     ────────────────────┬───────────────────
   ·                         ╰── This property was ignored.
 4 │     background-image: url( './image (1).jpg' );
   ╰────
  help: This property is going to be ignored because it doesn't look valid. If it is valid, please file an issue!
hdx_parser::Unimplemented

  × This block cannot yet be parsed by the parser :(
   ╭─[tasks/coverage/postcss-parser-tests/cases/function.css:3:1]
 3 │     background-image: url("./image (1).jpg");
 4 │     background-image: url( './image (1).jpg' );
   ·                       ──┬─
   ·                         ╰── Didn't recognise this bit
 5 │ }
   ╰────
  help: This feature needs to be implemented within hdx. This file won't parse without it.
hdx_parser::UnknownDeclaration

  × Ignored property due to parse error.
   ╭─[tasks/coverage/postcss-parser-tests/cases/function.css:3:1]
 3 │     background-image: url("./image (1).jpg");
 4 │     background-image: url( './image (1).jpg' );
   ·     ─────────────────────┬────────────────────
   ·                          ╰── This property was ignored.
 5 │ }
   ╰────
  help: This property is going to be ignored because it doesn't look valid. If it is valid, please file an issue!
